# tplgene_cpp

./: .gitignore  JBIC.LICENSE  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  project.config
src/: FFDB.cpp  Makefile.am  PDB.cpp  PDB.hpp  PDBFile.cpp  PDBStruct.cpp  SDATA.cpp  TG.hpp  TGSystemAA.cpp  TGSystemDNA.cpp  TGSystemDihed.cpp  TGTypes.cpp  TGUtils.cpp  TGUtils.hpp  TODO  main.cpp  pdbout.cpp  tgModify4LackedRes1.cpp  tgcheckss.cpp
src/old/: OptionParser.cpp  OptionParser.h  SDATAold.cpp  TGSystemAAold.cpp  tempAA.cpp
