# -- Top-level Makefile.am --

## Process this file with automake to produce Makefile.in
# CFLAGS=-g -Wall -O3 when compiling, and that means gcc throws every optimization trick
AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -Im4

SUBDIRS = src

dist_noinst_SCRIPTS = autogen.sh
dist_doc_DATA = README.md

